trunk/Archive2/5a/9aabd9dc8e5edc/output
main.cpp:12:1: error: static assertion failed: !!
 static_assert( Predicate<>::value, "!!");
 ^
